cmake_minimum_required(VERSION 3.5)

add_library(imgui STATIC
imconfig.h
imgui_demo.cpp
imgui_impl_glfw.cpp
imgui_impl_opengl3.h  
imgui_widgets.cpp  
imstb_truetype.h  
imgui_draw.cpp  
imgui_impl_glfw.h       
imgui_internal.h      
imstb_rectpack.h
imgui.cpp       
imgui.h         
imgui_impl_opengl3.cpp 
imgui_impl_opengl3_loader.h
imgui_impl_vulkan.cpp 
imgui_impl_vulkan.h
imgui_tables.cpp      
imstb_textedit.h)